# traffic-logger

./: LICENSE.txt  k8s-traffic-logger.py  pyproject.toml
k8s_traffic_logger/: capture.py  k8s.py  main.py
